页面及状态栏优化

--- a/app/src/main/assets/widget/html/discover_frame/discover_frame_body.html
+++ b/app/src/main/assets/widget/html/discover_frame/discover_frame_body.html
@@ -7,16 +7,18 @@
     <title>发现</title>
     <link rel="stylesheet" type="text/css" href="../../css/api.css"/>
     <link rel="stylesheet" type="text/css" href="../../css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="../../mui/css/mui.min.css">
     <style>
-        .empty{ text-align: center; padding: 120px 0; }
+        .empty{ text-align: center; padding: 120px 0;}
     </style>
 </head>
 <body>
-	<header>
-		<div>
-	        <span class="border-b active" >发现</span>
-	    </div>
-    </header>
     <div class="empty">发现</div>
 </body>
+<script type="text/javascript" src="../../mui/js/mui.min.js"></script>
+<script type="text/javascript">
+    apiready = function () {
+        
+	}
+</script>
 </html>
