首页新增九宫格布局

--- a/app/src/main/assets/widget/html/choice_frame/choice_frame_body.html
+++ b/app/src/main/assets/widget/html/choice_frame/choice_frame_body.html
@@ -8,12 +8,14 @@
     <link rel="stylesheet" type="text/css" href="../../css/api.css"/>
     <link rel="stylesheet" type="text/css" href="../../css/style.css"/>
     <link rel="stylesheet" type="text/css" href="../../mui/css/mui.min.css">
-    <style>
-        .empty{ text-align: center; padding: 120px 0; }
-    </style>
 </head>
 <body>
-    <div class="empty">精选</div>
+    <div>精选</div>
 </body>
 <script type="text/javascript" src="../../mui/js/mui.min.js"></script>
+<script type="text/javascript">
+    apiready = function () {
+        
+	}
+</script>
 </html>
