--- a/app/src/main/assets/widget/html/discover_frame/discover_frame_body.html
+++ b/app/src/main/assets/widget/html/discover_frame/discover_frame_body.html
@@ -8,12 +8,9 @@
     <link rel="stylesheet" type="text/css" href="../../css/api.css"/>
     <link rel="stylesheet" type="text/css" href="../../css/style.css"/>
     <link rel="stylesheet" type="text/css" href="../../mui/css/mui.min.css">
-    <style>
-        .empty{ text-align: center; padding: 120px 0;}
-    </style>
 </head>
 <body>
-    <div class="empty">发现</div>
+    <div>发现</div>
 </body>
 <script type="text/javascript" src="../../mui/js/mui.min.js"></script>
 <script type="text/javascript">
