--- a/app/src/main/assets/widget/html/my_frame/login_header.html
+++ b/app/src/main/assets/widget/html/my_frame/login_header.html
@@ -4,72 +4,20 @@
 <meta charset="UTF-8">
 <meta name="copyright" content="www.apicloud.com" />
 <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
-<title>首页</title>
+<title>登录</title>
 <link rel="stylesheet" type="text/css" href="../../css/api.css" />
-<style>
-#main {
-    display: -webkit-box; -webkit-box-orient: vertical;
-}
-.logo {
-    position: absolute; left: 10px; bottom: 8px; width: 34px; height: 34px;
-}
-.search-hov {
-    background-color: rgb(65,61,61);
-}
-.setting-hov {
-    background-color: rgb(65,61,61);
-}
-.navbar {
-    display: -webkit-box; -webkit-box-orient: horizontal;
-    position: relative;
-    height: 50px; box-sizing: border-box;
-    background: #C6F0F0;
-}
-.navbar-item {
-    display: block; -webkit-box-flex: 1;
-    width: 100%; line-height: 50px;
-    color: #999; font-size: 20px; text-align: center;
-}
-.navbar-item-hov {
-    background-color: rgba(254,242,228,0.7);
-}
-.navbar-item-active {
-    color: #05A7A6;
-}
-#navmark {
-    position: absolute; left: 0px; bottom: 0px;
-    height: 2px;
-    background-color: rgb(253,133,0);
-    -webkit-transition: 300ms;
-}
-#topbar {background-color: #05A7A6; height:50px;}
-.btn_click {background: #404040;}
-</style>
+<link rel="stylesheet" type="text/css" href="../../css/my/login_header.css" />
 </head>
 <body>
-    <div id="main">
-        <section id="content">
-        </section>
+    <div id="header" class="titlebar">
+        <div class="egret-header topbar">
+            <div class="egret-header-title">登录</div>
+            <div class="egret-header-text fr" onclick="openRegisterWin()">注册</div>
+            <div class="egret-img"><img src="../../image/ic_back_u.png" alt=""  tapmode="" onclick="goback()"></div>
+        </div>
     </div>
 </body>
 <script type="text/javascript" src="../../script/api.js"></script>
-<script type="text/javascript">
-    apiready = function() {
-        var header = $api.byId('header');
-        $api.fixStatusBar(header);
-        var header = $api.offset(header);
-        api.openFrame ({
-            name: 'login_body',
-            url: './login.html',
-            rect:{
-                x:0,
-                w:'auto',
-                h:'auto'
-            },
-            pageParam: {name: 200},
-            bounces: false,
-            delay:200
-        });
-    };
-</script>
+<script type="text/javascript" src="../../script/common.js"></script>
+<script type="text/javascript" src="../../script/my/login_header.js"></script>
 </html>
