--- a/app/src/main/assets/widget/html/my_frame/setting.html
+++ b/app/src/main/assets/widget/html/my_frame/setting.html
@@ -2,7 +2,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
-	<title>我的</title>
+	<title>设置</title>
 	<link rel="stylesheet" type="text/css" href="../../css/api.css" />
     <link rel="stylesheet" type="text/css" href="../../css/common.css" />
 
@@ -24,21 +24,21 @@
 		.item_ico {float: left;width: 30px;padding: 10px 10px 10px 0;}
 		.item_arrow {float: right;width: 16px;padding: 17px 15px 15px 0;}
 
-		.presshover {background-color: #E8E8E8;}
+		.highlight {opacity: 0.7;}
     </style>
 </head>
 <body>
 	<!-- 第一块 -->
 	<div class="firstblock">
-		<div class="item" tapmode="presshover" onclick="openLogin()">
+		<div class="item" tapmode="highlight" onclick="openLogin()">
 			<span>图片设置</span>
 			<img src="../../image/arrow.png" alt="" class="item_arrow">
 		</div><div class="h1"></div>
-		<div class="item" tapmode="presshover" onclick="openLogin()">
+		<div class="item" tapmode="highlight" onclick="openLogin()">
 			<span>消息提醒设置</span>
 			<img src="../../image/arrow.png" alt="" class="item_arrow">
 		</div><div class="h1"></div>
-		<div class="item" tapmode="presshover" onclick="openLogin()">
+		<div class="item" tapmode="highlight" onclick="openLogin()">
 			<span>清楚缓存</span>
 			<img src="../../image/arrow.png" alt="" class="item_arrow">
 		</div>
@@ -48,15 +48,15 @@
 	<!-- 第二块 -->
 	<div class="h10"></div>
 	<div class="secondblock">
-		<div class="item" tapmode="presshover" onclick="openLogin()">
+		<div class="item" tapmode="highlight" onclick="openLogin()">
 			<span>版本更新（已是最新版）</span>
 			<img src="../../image/arrow.png" alt="" class="item_arrow">
 		</div><div class="h1"></div>
-		<div class="item" tapmode="presshover" onclick="openLogin()">
+		<div class="item" tapmode="highlight" onclick="openLogin()">
 			<span>自动下载安装包</span>
 			<span class="fr hint">仅Wi-Fi网络</span>
 		</div><div class="h1"></div>
-		<div class="item" tapmode="presshover" onclick="openLogin()">
+		<div class="item" tapmode="highlight" onclick="openLogin()">
 			<span>关于我们</span>
 			<img src="../../image/arrow.png" alt="" class="item_arrow">
 		</div>
