--- a/app/src/main/assets/widget/html/my_frame/loginmore.html
+++ b/app/src/main/assets/widget/html/my_frame/loginmore.html
@@ -2,9 +2,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0"/>
-  <title>HTML</title>
+  <title>更多</title>
   
-  <!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   <link rel="stylesheet" type="text/css" href="../../css/api.css" />
