页面样式优化

--- a/app/src/main/assets/widget/html/my_frame/message.html
+++ b/app/src/main/assets/widget/html/my_frame/message.html
@@ -77,7 +77,7 @@
 
     <body>
         <header id="header">
-            <div class="back event-back"></div>
+            <div class="back event-back" tapmode="highlight"></div>
             <h1>用户消息</h1>
         </header>
         <nav id="nav">
